--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,14 +1,11 @@
 // Abstracts
-@import "abstracts/variables";
+@import 'abstracts/variables';
 
 // Base
-@import "base/animations";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/base';
+@import 'base/typography';
 
 // Components
-
-
-// Hamburger
-// @import "hamburger/hamburgers.scss";
+@import 'components/header';
+@import 'components/layout';
+@import 'components/search';
