trending and show grids complete, need to finish mobile sizing for these sections next

--- a/client/styles/abstracts/_variables.scss
+++ b/client/styles/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $semi-dark-blue: #161d2f;
 $pure-white: #ffffff;
 
 // Spacing
+$space-xsmall: 1.6rem;
 $space-small: 1.8rem;
 $space-medium: 2.4rem;
 $space-large: 3.2rem;
