--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -6,6 +6,10 @@
 @import 'base/typography';
 
 // Components
+@import 'components/buttons';
+@import 'components/cards';
 @import 'components/header';
 @import 'components/layout';
 @import 'components/search';
+@import 'components/show-grid';
+@import 'components/trending';
