--- a/client/styles/base/_typography.scss
+++ b/client/styles/base/_typography.scss
@@ -92,6 +92,18 @@ h4 {
     font-size: 2rem;
   }
 
+  h3 {
+    font-size: $font-body-medium;
+  }
+
+  h4 {
+    font-size: 1.4rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+  }
+
   .search {
     & input {
       font-size: 1.6rem;
