--- a/client/styles/components/_layout.scss
+++ b/client/styles/components/_layout.scss
@@ -6,11 +6,13 @@ main {
 }
 
 .layout {
+  display: grid;
+  grid-template-rows: 9.6rem min-content;
   margin: $space-large $space-medium $space-small $space-small;
 
   &__home {
     display: grid;
-    grid-template-rows: 9.6rem 33.5rem min-content;
+    grid-template-rows: 33.5rem min-content;
   }
 }
 
@@ -21,10 +23,11 @@ main {
   }
 
   .layout {
+    grid-template-rows: 6.5rem min-content;
     margin: 0 $space-medium 0 $space-medium;
 
     &__home {
-      grid-template-rows: 6.5rem 33.5rem min-content;
+      grid-template-rows: 33.5rem min-content;
     }
   }
 }
@@ -35,10 +38,11 @@ main {
   }
 
   .layout {
+    grid-template-rows: 4.8rem min-content;
     margin: 0 $space-xsmall 0 $space-xsmall;
 
     &__home {
-      grid-template-rows: 4.8rem 20.5rem min-content;
+      grid-template-rows: 20.5rem min-content;
     }
   }
 }
