--- a/client/styles/base/_typography.scss
+++ b/client/styles/base/_typography.scss
@@ -67,9 +67,12 @@ h4 {
 
 .search {
   & input {
-    color: $pure-white;
     font-size: $font-heading-medium;
   }
+}
+
+.input {
+  color: $pure-white;
 }
 
 .btn {
@@ -83,6 +86,10 @@ h4 {
   }
 
   & h4 {
+    color: $pure-white;
+  }
+
+  &__account {
     color: $pure-white;
   }
 }
