--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -6,9 +6,11 @@
 @import 'base/typography';
 
 // Components
+@import 'components/account';
 @import 'components/buttons';
 @import 'components/cards';
 @import 'components/header';
+@import 'components/inputs';
 @import 'components/layout';
 @import 'components/search';
 @import 'components/show-grid';
