--- a/client/styles/components/_buttons.scss
+++ b/client/styles/components/_buttons.scss
@@ -84,6 +84,12 @@
   &__account {
     background-color: $red;
     height: 4.8rem;
+    transition: all $fade ease-in-out;
+
+    &:hover {
+      background-color: $pure-white;
+      color: $dark-blue;
+    }
   }
 }
 
