--- a/client/styles/components/_inputs.scss
+++ b/client/styles/components/_inputs.scss
@@ -20,16 +20,34 @@
     background-color: $semi-dark-blue;
     border-bottom: 1px solid rgba($greyish-blue, 1);
     height: 3.7rem;
-    margin-bottom: $space-medium;
     padding: 0 0 $space-xsmall $space-xsmall;
     width: 33.6rem;
+
+    &__error-label {
+      display: flex;
+      justify-content: flex-end;
+      width: 100%;
+
+      & p {
+        position: absolute;
+        transform: translateY(-3.75rem);
+      }
+    }
+
+    &--error {
+      border-bottom: 1px solid rgba($red, 1);
+    }
 
     &:focus {
       border-bottom: 1px solid rgba($pure-white, 1);
     }
+  }
+}
 
-    &:last-of-type {
-      margin-bottom: 4rem;
+@media (max-width: $tablet-break) {
+  .input {
+    &__account {
+      width: 100%;
     }
   }
 }
